@@ -1,5 +1,6 @@
 pgcenter (devel) unstable; urgency=low
 
+  * add PVS-Studio comments, fix issues generated by PVS.
   * rename screens/consoles entities to more convenient name - tabs.
   * fix build errors on Ubuntu
   * split single file to many; collapse excessive comments.
